fix spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,7 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
-    letter-spacing 0.5px;
+    //letter-spacing: 0.5px;
 }
 
 
